--- a/src/TrgovinaAPI/TrgovinaAPI.csproj
+++ b/src/TrgovinaAPI/TrgovinaAPI.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsID>2f813169-fc9a-4f1f-8aa0-3444af362b8c</UserSecretsID>
   </PropertyGroup>
