--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,11 @@ steps:
   inputs:
     version: '3.1.x'
     packageType: sdk
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet test'
+  inputs:
+    command: test
+    projects: '**/*Tests/*.csproj'
+    testRunTitle: 'xUnit Test Run'
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
