--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
   inputs:
     version: '3.1.x'
     packageType: sdk
-    
+
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
@@ -29,3 +29,13 @@ steps:
     projects: '**/*Tests/*.csproj'
     testRunTitle: 'xUnit Test Run'
 
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
+  inputs: 
+    command: publish
+    publishWebProjects: false
+    projects: 'src/TrgovinaAPI/*.csproj'
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'publish artifacts'
