--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,14 @@ steps:
     command: test
     projects: '**/*Tests/*.csproj'
     testRunTitle: 'xUnit Test Run'
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
+  inputs: 
+    command: publish
+    publishWebProjects: false
+    projects: 'src/TrgovinaAPI/*.csproj'
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'publish artifacts'
